# doc_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  auth_cli.py  crawl_cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vectorize_cli.py
.github/workflows/: ci.yml
config/: sites.yaml.example
document/: requirements.md
documentation/: _documentation-index.md  _documentation_actualization_state.md  _documentation_standards.md  _documentation_template.md  _naming_convention.md  _story_template.md  authentication.md  configuration.md  crawling.md  index.md  installation.md  manual-test-scenarios.md  mcp-server.md  operations.md  overview.md  semantic_search_implementation_stages.md  sqlite_vector_queries.md  testing.md  troubleshooting.md
documentation/test_scenarios/: manual-test-scenarios.md  testing_framework_test_scenarios.md
scripts/: check_documentation_changelog_duplicates.py
skills/: commiter.md
skills/docs-guardian/: SKILL.md
skills/release-note-writer/: SKILL.md
src/: main.py
src/docmcp/: main.py  (+7 more)
tech-debt/: 2026-04-24.md  2026-04-25.md  2026-05-09.md  2026-05-10.md  2026-05-17.md  2026-05-20.md  2026-05-23.md  2026-05-24.md  2026-06-06.md  2026-06-07.md
tests/: __init__.py  conftest.py  test_auth_cli.py  test_config_loader.py  test_crawl_cli.py  test_crawl_helpers.py  test_index_store.py  test_main.py  test_mcp_tools.py  test_packaging.py  test_performance_guards.py  test_smoke_support.py  test_tools.py  test_vector_index.py  test_vectorize_cli.py  test_version_loader.py
(+17 files in other folders)
